--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "bun run index.ts",
-    "lint": "biome check --error-on-warnings --apply ."
+    "lint": "biome check --error-on-warnings --apply .",
+    "prestart": "bun run lint",
+    "start": "bun index.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.2",
