--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "module": "src/index.ts",
   "type": "module",
   "scripts": {
+    "clean": "rimraf dist",
+    "prelint": "bun run clean",
     "lint": "biome check --error-on-warnings --apply .",
     "prebuild": "bun run lint",
-    "build": "bun build --compile --minify --sourcemap src/index.ts --outfile runapp",
+    "build": "bun build --compile --minify --sourcemap src/index.ts --outfile dist/runapp",
     "prestart": "bun run lint",
     "start": "bun src/index.ts"
   },
@@ -14,7 +16,8 @@
     "@eslint/js": "^9.1.1",
     "@types/bun": "latest",
     "@types/figlet": "^1.5.8",
-    "eslint": "^9.1.1"
+    "eslint": "^9.1.1",
+    "rimraf": "^5.0.5"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
