feat: add exclude option to tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "exclude": ["node_modules", "build", "dist", "out"],
     // Enable latest features
     "lib": ["ESNext", "DOM"],
     "target": "ESNext",
